--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
   <button id="btn">compute</button>
 
   <p id="result"></p>
+  <p>
+    Insert the information in the form and the calculator will determine the sine<br> 
+    What is the sine calculator?<br>
+    The sine calculator is a tool that determines the sine angle.<br>
+    How to calculate sine angle?<br>
+    To calculate sine angle you should use the following formula:<br>
+    sine angle = opposite angle / hypotenuse angle<br>
+    Why use sine calculator?<br>
+    The sine calculator is used in order to calculate the sine angle.<br>
+</p>
   <script src="app.js"></script>
 </body>
 </html>
